# minetest-gltf

./: Cargo.toml  README.md  makefile
junkyard/dead_code/: readme.toml
junkyard/dead_code/material/: normal.rs
src/: lib.rs  mine_gltf.rs  minetest_gltf.rs  model.rs  scene.rs
src/model/: animation.rs  primitive.rs
src/scene/: animation.rs  camera.rs  light.rs  mod.rs  model.rs  primitive.rs
src/scene/model/: material.rs  mod.rs  vertex.rs
src/scene/model/material/: emissive.rs  mod.rs  occlusion.rs  pbr.rs
src/utils/: gltf_data.rs  mod.rs
tests/: fixed_spider.glb
