[package]
name = "minetest-gltf"
version = "3.0.1"
authors = ["Florian Amsallem <florian.amsallem@epita.fr>", "jordan4ibanez"]
description = "glTF 2.0 loader with an easy to use output. Modified extensively for the minetest-rust engine."
edition = "2021"
license = "MIT"
keywords = ["glTF", "3D", "asset", "model", "minetest"]
exclude = [".github/"]

[lints.rust]
# DO NOT allow unsafe code.
unsafe_code = "forbid"
# These can be turned on and off for active development.
# dead_code = "allow"
# unused_variables = "allow"

[lints.clippy]
# These ones are REALLY annoying.
# missing_docs = "forbid"
unwrap_used = "warn"
panicking_unwrap = "warn"
expect_used = "warn"
# missing_docs_in_private_items = "warn"

[features]
default = []
names = ["gltf/names"]
extras = ["gltf/extras"]

[dependencies]
glam = "0.25.0"
gltf = "1.4.0"
base64 = "0.22.0"
env_logger = "0.11.2"
log = "0.4.20"
ahash = "0.8.8"
